{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 110,
  "lineage": "97751cfb-1ba1-e525-d23b-fb39e00a4184",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757337303035:route-table/rtb-0004a6de51493e9ed",
            "id": "rtb-0004a6de51493e9ed",
            "owner_id": "757337303035",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b821c54b54dc567"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041638b54dec239de",
            "region": "us-west-2",
            "route_table_id": "rtb-0004a6de51493e9ed",
            "subnet_id": "subnet-048013f25ea982214"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.lambda_subnet_a",
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b58a11bac79190af",
            "region": "us-west-2",
            "route_table_id": "rtb-0004a6de51493e9ed",
            "subnet_id": "subnet-085d21e3a05bc440c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.lambda_subnet_b",
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757337303035:security-group/sg-00e7768d80846863d",
            "description": "Allow NFS traffic from Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e7768d80846863d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "lambda-efs-sg",
            "name_prefix": "",
            "owner_id": "757337303035",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lambda-sg"
            },
            "tags_all": {
              "Name": "lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b821c54b54dc567"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lambda_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757337303035:subnet/subnet-048013f25ea982214",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048013f25ea982214",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757337303035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lambda-subnet-a"
            },
            "tags_all": {
              "Name": "lambda-subnet-a"
            },
            "vpc_id": "vpc-07b821c54b54dc567"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lambda_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757337303035:subnet/subnet-085d21e3a05bc440c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085d21e3a05bc440c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757337303035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lambda-subnet-b"
            },
            "tags_all": {
              "Name": "lambda-subnet-b"
            },
            "vpc_id": "vpc-07b821c54b54dc567"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lambda_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757337303035:vpc/vpc-07b821c54b54dc567",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06db5e9a0d8ac4417",
            "default_route_table_id": "rtb-043f6de891692a331",
            "default_security_group_id": "sg-07c0848ac5804abab",
            "dhcp_options_id": "dopt-7e380906",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b821c54b54dc567",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-043f6de891692a331",
            "owner_id": "757337303035",
            "region": "us-west-2",
            "tags": {
              "Name": "lambda-vpc"
            },
            "tags_all": {
              "Name": "lambda-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757337303035:vpc-endpoint/vpce-0388351c1fa5b284f",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0388351c1fa5b284f",
            "owner_id": "757337303035",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "region": "us-west-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0004a6de51493e9ed",
              "rtb-043f6de891692a331"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "service_region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "vpce-s3"
            },
            "tags_all": {
              "Name": "vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-07b821c54b54dc567"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757337303035:vpc-endpoint/vpce-011c2ab50298224b2",
            "dns_entry": [
              {
                "dns_name": "vpce-011c2ab50298224b2-p1zlldcm.sns.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-011c2ab50298224b2-p1zlldcm-us-west-2a.sns.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-011c2ab50298224b2-p1zlldcm-us-west-2b.sns.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "sns.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z02652492KTCEZ2220SGS"
              },
              {
                "dns_name": "sns.us-west-2.api.aws",
                "hosted_zone_id": "Z026454433X6B1O52GBCZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-011c2ab50298224b2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05c8335a495652d87",
              "eni-08f3c93058fbf1b9b"
            ],
            "owner_id": "757337303035",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-00e7768d80846863d"
            ],
            "service_name": "com.amazonaws.us-west-2.sns",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.179",
                "subnet_id": "subnet-048013f25ea982214"
              },
              {
                "ipv4": "10.0.2.112",
                "subnet_id": "subnet-085d21e3a05bc440c"
              }
            ],
            "subnet_ids": [
              "subnet-048013f25ea982214",
              "subnet-085d21e3a05bc440c"
            ],
            "tags": {
              "Centro de Costos": "Primario",
              "Name": "vpce-sns"
            },
            "tags_all": {
              "Centro de Costos": "Primario",
              "Name": "vpce-sns"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07b821c54b54dc567"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_subnet.lambda_subnet_a",
            "aws_subnet.lambda_subnet_b",
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    }
  ]
}